fix: star button high contrast support

--- a/src/ui/style-hc.css
+++ b/src/ui/style-hc.css
@@ -18,6 +18,11 @@
   opacity: 1;
 }
 
+.fretboard-star-toggle:checked:not(:hover) {
+  border: 0;
+  box-shadow: none;
+}
+
 .fretboard-chord-preview-dot.active {
   border: 1px solid @border-color;
 }
